1.renaming of Managed Identity base model types and mixin types. 2.rRenaming other mixin model types.

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -139,16 +139,16 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`DefaultProvisioningStateProperty`](./data-types.md#Azure.ResourceManager.DefaultProvisioningStateProperty)
 - [`Encryption`](./data-types.md#Azure.ResourceManager.Encryption)
 - [`EncryptionConfiguration`](./data-types.md#Azure.ResourceManager.EncryptionConfiguration)
-- [`EntityTag`](./data-types.md#Azure.ResourceManager.EntityTag)
+- [`EntityTagProperty`](./data-types.md#Azure.ResourceManager.EntityTagProperty)
 - [`ErrorResponse`](./data-types.md#Azure.ResourceManager.ErrorResponse)
 - [`ExtendedLocationProperty`](./data-types.md#Azure.ResourceManager.ExtendedLocationProperty)
 - [`ExtensionResource`](./data-types.md#Azure.ResourceManager.ExtensionResource)
 - [`KeysOf`](./data-types.md#Azure.ResourceManager.KeysOf)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.LocationParameter)
 - [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.LocationResourceParameter)
-- [`ManagedBy`](./data-types.md#Azure.ResourceManager.ManagedBy)
-- [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.ManagedServiceIdentity)
-- [`ManagedSystemAssignedIdentity`](./data-types.md#Azure.ResourceManager.ManagedSystemAssignedIdentity)
+- [`ManagedByProperty`](./data-types.md#Azure.ResourceManager.ManagedByProperty)
+- [`ManagedServiceIdentityProperty`](./data-types.md#Azure.ResourceManager.ManagedServiceIdentityProperty)
+- [`ManagedSystemAssignedIdentityProperty`](./data-types.md#Azure.ResourceManager.ManagedSystemAssignedIdentityProperty)
 - [`ParentKeysOf`](./data-types.md#Azure.ResourceManager.ParentKeysOf)
 - [`PrivateEndpoint`](./data-types.md#Azure.ResourceManager.PrivateEndpoint)
 - [`PrivateEndpointConnection`](./data-types.md#Azure.ResourceManager.PrivateEndpointConnection)
@@ -165,12 +165,12 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourceGroupLocationResource`](./data-types.md#Azure.ResourceManager.ResourceGroupLocationResource)
 - [`ResourceGroupParameter`](./data-types.md#Azure.ResourceManager.ResourceGroupParameter)
 - [`ResourceInstanceParameters`](./data-types.md#Azure.ResourceManager.ResourceInstanceParameters)
-- [`ResourceKind`](./data-types.md#Azure.ResourceManager.ResourceKind)
+- [`ResourceKindProperty`](./data-types.md#Azure.ResourceManager.ResourceKindProperty)
 - [`ResourceListResult`](./data-types.md#Azure.ResourceManager.ResourceListResult)
 - [`ResourceNameParameter`](./data-types.md#Azure.ResourceManager.ResourceNameParameter)
 - [`ResourceParentParameters`](./data-types.md#Azure.ResourceManager.ResourceParentParameters)
-- [`ResourcePlan`](./data-types.md#Azure.ResourceManager.ResourcePlan)
-- [`ResourceSku`](./data-types.md#Azure.ResourceManager.ResourceSku)
+- [`ResourcePlanProperty`](./data-types.md#Azure.ResourceManager.ResourcePlanProperty)
+- [`ResourceSkuProperty`](./data-types.md#Azure.ResourceManager.ResourceSkuProperty)
 - [`ResourceUriParameter`](./data-types.md#Azure.ResourceManager.ResourceUriParameter)
 - [`SubscriptionIdParameter`](./data-types.md#Azure.ResourceManager.SubscriptionIdParameter)
 - [`SubscriptionLocationResource`](./data-types.md#Azure.ResourceManager.SubscriptionLocationResource)
@@ -204,8 +204,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ExtensionScope`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionScope)
 - [`LocationBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.LocationBaseParameters)
 - [`LocationScope`](./data-types.md#Azure.ResourceManager.Foundations.LocationScope)
-- [`ManagedIdentityProperties`](./data-types.md#Azure.ResourceManager.Foundations.ManagedIdentityProperties)
-- [`ManagedSystemIdentityProperties`](./data-types.md#Azure.ResourceManager.Foundations.ManagedSystemIdentityProperties)
+- [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.Foundations.ManagedServiceIdentity)
 - [`Operation`](./data-types.md#Azure.ResourceManager.Foundations.Operation)
 - [`OperationDisplay`](./data-types.md#Azure.ResourceManager.Foundations.OperationDisplay)
 - [`OperationIdParameter`](./data-types.md#Azure.ResourceManager.Foundations.OperationIdParameter)
@@ -221,9 +220,11 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourceUpdateModelProperties`](./data-types.md#Azure.ResourceManager.Foundations.ResourceUpdateModelProperties)
 - [`SubscriptionBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.SubscriptionBaseParameters)
 - [`SubscriptionScope`](./data-types.md#Azure.ResourceManager.Foundations.SubscriptionScope)
+- [`SystemAssignedServiceIdentity`](./data-types.md#Azure.ResourceManager.Foundations.SystemAssignedServiceIdentity)
 - [`SystemData`](./data-types.md#Azure.ResourceManager.Foundations.SystemData)
 - [`TagsUpdateModel`](./data-types.md#Azure.ResourceManager.Foundations.TagsUpdateModel)
 - [`TenantBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.TenantBaseParameters)
 - [`TenantScope`](./data-types.md#Azure.ResourceManager.Foundations.TenantScope)
 - [`TrackedResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.TrackedResourceBase)
+- [`UserAssignedIdentities`](./data-types.md#Azure.ResourceManager.Foundations.UserAssignedIdentities)
 - [`UserAssignedIdentity`](./data-types.md#Azure.ResourceManager.Foundations.UserAssignedIdentity)
