--- a/docs/release-notes/release-2024-05-07.md
+++ b/docs/release-notes/release-2024-05-07.md
@@ -43,6 +43,71 @@ This release contains breaking changes
 
 - Deprecate `Foundations.ExtensionResourceBase`. `Foundations.ExtensionResource` should be used instead.
 
+Standardizing mix-in model names with consistent `Property` suffix.
+
+- Deprecate `ManagedServiceIdentity`. `ManagedServiceIdentityProperty` should be used instead.
+
+  Example:
+
+  ```diff
+  -...ManagedServiceIdentity;
+  +...ManagedServiceIdentityProperty;
+  ```
+
+- Deprecate `ManagedSystemAssignedIdentity`. `ManagedSystemAssignedIdentityProperty` should be used instead.
+
+  Example:
+
+  ```diff
+  -...ManagedSystemAssignedIdentity;
+  +...ManagedSystemAssignedIdentityProperty;
+  ```
+
+- Deprecate `EntityTag`. `EntityTagProperty` should be used instead.
+
+  Example:
+
+  ```diff
+  -...EntityTag;
+  +...EntityTagProperty;
+  ```
+
+- Deprecate `ResourceKind`. `ResourceKindProperty` should be used instead.
+
+  Example:
+
+  ```diff
+  -...ResourceKind;
+  +...ResourceKindProperty;
+  ```
+
+- Deprecate `ResourcePlan`. `ResourcePlanProperty` should be used instead.
+
+  Example:
+
+  ```diff
+  -...ResourcePlan;
+  +...ResourcePlanProperty;
+  ```
+
+- Deprecate `ResourceSku`. `ResourceSkuProperty` should be used instead.
+
+  Example:
+
+  ```diff
+  -...ResourceSku;
+  +...ResourceSkuProperty;
+  ```
+
+- Deprecate `ManagedBy`. `ManagedByProperty` should be used instead.
+
+  Example:
+
+  ```diff
+  -...ManagedBy;
+  +...ManagedByProperty;
+  ```
+
 ## Features
 
 ### @azure-tools/typespec-autorest
