--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -226,4 +226,5 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`TenantBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.TenantBaseParameters)
 - [`TenantScope`](./data-types.md#Azure.ResourceManager.Foundations.TenantScope)
 - [`TrackedResource`](./data-types.md#Azure.ResourceManager.Foundations.TrackedResource)
+- [`UserAssignedIdentities`](./data-types.md#Azure.ResourceManager.Foundations.UserAssignedIdentities)
 - [`UserAssignedIdentity`](./data-types.md#Azure.ResourceManager.Foundations.UserAssignedIdentity)
