Initial commit of ARM bug fix and rename/reorg (#762)
This change contains following changes:

- Updated `extendedLocation` with optional and READ, CREATE
- Renamed base common types to be consistent with ARM common type,
included backcompat aliases with #deprecate
  - ArmResource -> Resource
  - TrackResourceBase -> TrackResource
  - ProxyResourceBase -> ProxyResource
  - ExtensionResourceBase -> ExtensionResource
  - ResourceSku -> Sku
  - ResourcePlan -> Plan

Note: both the `#deprecated alias` and in some cases `TrackResource<T>`
and `Foundations.TrackResource` may cause spec break.
`rest-api-specs/typespec-next` will be checked and updated if this is
approved.

---------

Co-authored-by: Timothee Guerin <timothee.guerin@outlook.com>

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -190,9 +190,8 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Models
 
-- [`ArmResource`](./data-types.md#Azure.ResourceManager.Foundations.ArmResource)
-- [`ArmResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.ArmResourceBase)
 - [`ArmTagsProperty`](./data-types.md#Azure.ResourceManager.Foundations.ArmTagsProperty)
+- [`AzureEntityResource`](./data-types.md#Azure.ResourceManager.Foundations.AzureEntityResource)
 - [`CheckNameAvailabilityRequest`](./data-types.md#Azure.ResourceManager.Foundations.CheckNameAvailabilityRequest)
 - [`CheckNameAvailabilityResponse`](./data-types.md#Azure.ResourceManager.Foundations.CheckNameAvailabilityResponse)
 - [`DefaultBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.DefaultBaseParameters)
@@ -200,7 +199,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.Foundations.ErrorDetail)
 - [`ExtendedLocation`](./data-types.md#Azure.ResourceManager.Foundations.ExtendedLocation)
 - [`ExtensionBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionBaseParameters)
-- [`ExtensionResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionResourceBase)
+- [`ExtensionResource`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionResource)
 - [`ExtensionScope`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionScope)
 - [`LocationBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.LocationBaseParameters)
 - [`LocationScope`](./data-types.md#Azure.ResourceManager.Foundations.LocationScope)
@@ -210,14 +209,15 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`OperationIdParameter`](./data-types.md#Azure.ResourceManager.Foundations.OperationIdParameter)
 - [`OperationListResult`](./data-types.md#Azure.ResourceManager.Foundations.OperationListResult)
 - [`OperationStatusResult`](./data-types.md#Azure.ResourceManager.Foundations.OperationStatusResult)
-- [`ProxyResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.ProxyResourceBase)
+- [`Plan`](./data-types.md#Azure.ResourceManager.Foundations.Plan)
+- [`ProxyResource`](./data-types.md#Azure.ResourceManager.Foundations.ProxyResource)
 - [`ProxyResourceUpdateModel`](./data-types.md#Azure.ResourceManager.Foundations.ProxyResourceUpdateModel)
+- [`Resource`](./data-types.md#Azure.ResourceManager.Foundations.Resource)
 - [`ResourceGroupBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.ResourceGroupBaseParameters)
 - [`ResourceGroupScope`](./data-types.md#Azure.ResourceManager.Foundations.ResourceGroupScope)
-- [`ResourcePlanType`](./data-types.md#Azure.ResourceManager.Foundations.ResourcePlanType)
-- [`ResourceSkuType`](./data-types.md#Azure.ResourceManager.Foundations.ResourceSkuType)
 - [`ResourceUpdateModel`](./data-types.md#Azure.ResourceManager.Foundations.ResourceUpdateModel)
 - [`ResourceUpdateModelProperties`](./data-types.md#Azure.ResourceManager.Foundations.ResourceUpdateModelProperties)
+- [`Sku`](./data-types.md#Azure.ResourceManager.Foundations.Sku)
 - [`SubscriptionBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.SubscriptionBaseParameters)
 - [`SubscriptionScope`](./data-types.md#Azure.ResourceManager.Foundations.SubscriptionScope)
 - [`SystemAssignedServiceIdentity`](./data-types.md#Azure.ResourceManager.Foundations.SystemAssignedServiceIdentity)
@@ -225,6 +225,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`TagsUpdateModel`](./data-types.md#Azure.ResourceManager.Foundations.TagsUpdateModel)
 - [`TenantBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.TenantBaseParameters)
 - [`TenantScope`](./data-types.md#Azure.ResourceManager.Foundations.TenantScope)
-- [`TrackedResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.TrackedResourceBase)
+- [`TrackedResource`](./data-types.md#Azure.ResourceManager.Foundations.TrackedResource)
 - [`UserAssignedIdentities`](./data-types.md#Azure.ResourceManager.Foundations.UserAssignedIdentities)
 - [`UserAssignedIdentity`](./data-types.md#Azure.ResourceManager.Foundations.UserAssignedIdentity)
