--- a/docs/howtos/DataPlane Generation - DPG/00howtogen.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/00howtogen.mdx
@@ -53,3 +53,5 @@ options:
   "@azure-tools/typespec-python":
     package-name: azure-service-template
 ```
+
+Several language repositories support the `tsp-client` CLI to facilitate generating client libraries. For more information on the `tsp-client`, see [Getting started with `tsp-client`](./09tsp_client.mdx).
