--- a/docs/howtos/DataPlane Generation - DPG/00howtogen.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/00howtogen.mdx
@@ -54,4 +54,4 @@ options:
     package-name: azure-service-template
 ```
 
-Several language repositories support the `tsp-client` CLI to facilitate generating client libraries. For more information on the `tsp-client`, see [Getting started with `tsp-client`](./09tsp_client.mdx).
+Several language repositories support the `tsp-client` tool to facilitate generating client libraries. For more information on the `tsp-client`, see [Getting started with `tsp-client`](./09tsp_client.mdx).
