--- a/.chronus/changes/add_e2e_test-2024-4-10-13-19-5.md
+++ b/.chronus/changes/add_e2e_test-2024-4-10-13-19-5.md
@@ -1,7 +1,7 @@
 ---
-changeKind: internal
+changeKind: fix
 packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-add ci step to check against latest released typespec compiler
+Fix: Crash due to using api from next version of the compiler
