--- a/docs/howtos/DataPlane Generation - DPG/00howtogen.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/00howtogen.mdx
@@ -54,4 +54,4 @@ options:
     package-name: azure-service-template
 ```
 
-Several language repositories support the `tsp-client` tool to facilitate generating client libraries. For more information on the tool, see [Getting started with `tsp-client`](./../Generating&#32;with&#32;tsp-client/tsp_client).
+Several language repositories support the `tsp-client` tool to facilitate generating client libraries. For more information on the tool, see [Getting started with `tsp-client`](<./../Generating with tsp-client/tsp_client.md>).
