--- a/.chronus/changes/release-may-2024-2024-4-20-13-6-10.md
+++ b/.chronus/changes/release-may-2024-2024-4-20-13-6-10.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-resource-manager"
 ---
 
-Changing back `ManagedServiceIdentity.userAssignedIdentities` back to `Record<UserAssignedIdentity`. Adding ARM common-type references for on all Managed Idenitity models.
+Changing back `ManagedServiceIdentity.userAssignedIdentities` back to `Record<UserAssignedIdentity`. Adding ARM common-type references for on all Managed Identity models.
