--- a/docs/emitters/typespec-azure-rulesets/reference/index.mdx
+++ b/docs/emitters/typespec-azure-rulesets/reference/index.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 # Overview
 
-TypeSpec ruleset for azure specs
+TypeSpec ruleset for Azure specs
 
 ## Install
 
